fix(ships): fix jumping scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,4 +15,7 @@ body {
 
 body {
     min-height: 100%;
+
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
 }
